--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
   <img src ="img/goat2.jpeg" alt="an image of a goat">
  <div class="conatiner"> 
   <h1>Exchange Rate Calculator</h1>
-  <p>Enter the amount you want to exchange and then select the currency youi like to exchange it to</p>
+  <p>Enter the amount you want to exchange and then select the currency you like to exchange it to</p>
   <form id="input">
     <label for ="enterDollar">Enter an amount in Dollars</label>
-    <input id = "dollarInput" type="number" name="dollarInput" placeholder="0" value="1">
+    <input id = "dollarInput" type="number" name="dollarInput">
     <label for ="currencySelection">Choose currency to convert to</label>
     <select name=" currencySelection" id="currencySelection">
       <option value="">Select the Currency</option>
