--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
   <title>Currency Exchanger</title>
 </head>
 <body>
-  <img src ="img/goat2.jpeg" alt="an image of a goat">
- <div class="conatiner"> 
+  <div class="conatiner"> 
   <h1>Exchange Rate Calculator</h1>
   <p>Enter the amount you want to exchange and then select the currency you like to exchange it to</p>
   <form id="input">
@@ -19,6 +18,26 @@
       <option value="ALL">Albanian Lek</option>
       <option value="AMD">Armenian Dram</option>
       <option value="ANG">Netherlands Antillian Guilder</option>
+      <option value="AOA">Angolan Kwanza</option>
+      <option value="ARS">Argentine Peso</option>
+      <option value="AUD">Australian Dollar</option>
+      <option value="AWG">Aruban Florin</option>
+      <option value="AZN">Azerbaijani Manat</option>
+      <option value="BAM">Bosnia and Herzegovina Mark</option>
+      <option value="BBD">Barbados Dollar</option>
+      <option value="BDT">Bangladeshi Taka</option>
+      <option value="BGN">Bulgarian Lev</option>
+      <option value="BHD">Bahraini Dinar</option>
+      <option value="BIF">Burundian Franc</option>
+      <option value="BMD">Bermudian Dollar</option>
+      <option value="BND">Brunei Dollar</option>
+      <option value="BOB">Bolivian Boliviano</option>
+      <option value="BRL">Brazilian Real</option>
+      <option value="BSD">Bahamian Dollar</option>
+      <option value="BTN">Bhutanese Ngultrum</option>
+      <option value="BWP">Botswana Pula</option>
+      <option value="BYN">Belarusian Ruble</option>
+      <option value="BZD">Belize Dollar</option>
     </select><br>
     <button type ="submit" class="btn-change">Convert</button>
     </form>
